[package]
edition = "2021"
name = "napi"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
bdk = "0.26.0"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.10.16", default-features = false, features = ["napi8"] }
napi-derive = "2.10.1"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
